--- a/_posts/2016-07-11-SAT2Vec.md
+++ b/_posts/2016-07-11-SAT2Vec.md
@@ -42,27 +42,27 @@ And ([as shown by][pats_post] my friend and colleague Patrick Callier):
 ## Word2Vec is to the SAT as?
 
 So with all these analogies embedded in the model, I started thinking back to
-when analogies were most prevalent in my life: when preparing for the SAT
-college entrance exam. How would the model fare if asked to complete a few SAT
+when analogies were most prevalent in my life: SAT college entrance exam
+preparation! How would the model fare if asked to complete a few SAT
 analogies?
 
-To find out I grabbed Google's [pretrained Word2Vec model][w2v_model] which
-was trained on Google News and then scrapped 37 practice SAT analogies with
-answers from various website. Once I had the analogies, I calculated the
+To find out, I grabbed Google's [pretrained Word2Vec model][w2v_model], which
+was trained on Google News, and then scraped 37 practice SAT analogies with
+answers from various websites. Once I had the analogies, I calculated the
 difference between the vectors for each pair of words. For example, for 
-`King : Man :: Queen : Woman` I would calculate the vector product for `King −
+`King : Man :: Queen : Woman`, I would calculate the vector sum for `King −
 Man` and also for `Queen − Woman`. I then computed the cosine distance between
-the question pair of words and the potential answer pairs and ranked then from
-lowest to highest. If the model did well for an analogy, the correct pair
-would be the lowest distance from the question pair, otherwise it would be
-further away.
+the vectors from the prompt pair of words and the potential answer pairs and
+ranked them from lowest to highest. If the model performed well for an
+analogy, the correct pair would be the lowest distance from the prompt pair,
+otherwise it would be further away.
 
 [w2v_model]: https://drive.google.com/file/d/0B7XkCwpI5KDYNlNUTTlSS21pQmM/edit?usp=sharing
 
 You can find the Jupyter Notebook used to run the model [here][notebook]
 ([Rendered on Github][notebook_rendered]). You will need the [analogies
 data][analogies_json] and [pretrained model][model_json]. The model has been
-stripped down to only contain the words that appear in our analogies to save
+stripped down to only contain the words that appear in the analogies to save
 space.
 
 [notebook]: {{ site.url }}/files/sat2vec/Word2Vec SAT.ipynb
@@ -70,7 +70,9 @@ space.
 [analogies_json]: {{ site.url }}/files/sat2vec/analogies.json
 [model_json]: {{ site.url }}/files/sat2vec/vectors.json
 
-Here is an example where the model got it right, that is, the correct answer
+## Results
+
+Here is an example where the model determined the right answer, that is, the correct answer
 (in **bold**) is ranked first:
 
 | authenticity : counterfeit   | Distance   |
@@ -81,8 +83,14 @@ Here is an example where the model got it right, that is, the correct answer
 | reserve : reticent           | 1.009      |
 | anticipation : solemn        | 1.049      |
 
+Note that `reliability : erratic` was the word pair with the lowest
+distance, that is, the model predicted that it was the correct answer. Just as
+'counterfeit' implies lack of authenticity, so 'erratic' implies lack of
+reliability. The model did in fact succeed in its prediction.
+
 Counterfeit means without authenticity, just as erratic means without
-reliability. However, the model often failed:
+reliability. However, the model often failed, as it does for the prompt
+`paltry : significance`:
 
 | paltry : significance   | Distance   |
 |:------------------------|:-----------|
@@ -92,13 +100,13 @@ reliability. However, the model often failed:
 | oblique : familiarity   | 0.895      |
 | opulent : wealth        | 0.984      |
 
-Here the correct answer is ranked third. Overall, the model got about 20%
-correct (ranked 1). The distribution of answers is as follows:
+Here the correct answer is ranked third. Overall, the model ranked the correct
+answer first about 20% of the time. The distribution of answers is as follows:
 
 ![Word2Vec Results on SAT Analogies]({{ site.url }}/files/sat2vec/analogies_ranking.png)
 
 So our model isn't getting into Berkeley anytime soon; maybe it should try
-applying to Stanford instead! (Go bears!)
+applying to Stanford instead? (Go bears!)
 
 The model's answer for all 37 analogies can be found [here][results].
 
