Remove redundant sentence in SAT2Vec post

--- a/_posts/2016-07-11-SAT2Vec.md
+++ b/_posts/2016-07-11-SAT2Vec.md
@@ -88,9 +88,8 @@ distance, that is, the model predicted that it was the correct answer. Just as
 'counterfeit' implies lack of authenticity, so 'erratic' implies lack of
 reliability. The model did in fact succeed in its prediction.
 
-Counterfeit means without authenticity, just as erratic means without
-reliability. However, the model often failed, as it does for the prompt
-`paltry : significance`:
+However, the model often failed, as it does for the prompt `paltry :
+significance`:
 
 | paltry : significance   | Distance   |
 |:------------------------|:-----------|
