Add expanded metadata to posts
This will allow Twitter cards and Open Graph to work.

--- a/_posts/2016-07-11-SAT2Vec.md
+++ b/_posts/2016-07-11-SAT2Vec.md
@@ -1,6 +1,10 @@
 ---
 layout: post
 title: "SAT2Vec: Word2Vec versus SAT Analogies"
+description: >
+  Could Word2Vec pass the SAT analogies section and get accepted to a good
+  college? I take a pre-trained model and find out!
+image: /files/sat2vec/analogies_ranking.png
 ---
 
 Word embeddings, like [Word2Vec][Word2Vec_paper] and [GloVe][GloVe_site], have
