Update article plots to SVG
The following changes were made:

- Images updated to SVG
- White space around the plots was reduced
- New data (from re-checking) as used for the initial article plots

Additionally the PNG images were also updated to avoid breaking any
external links, and for the Twitter/OpenGraph cards which do not support
SVG.

Finally, the .gitignore was updated to ignore the Jupyter
.ipynb_checkpoints/ folder.

--- a/_posts/2016-07-11-SAT2Vec.md
+++ b/_posts/2016-07-11-SAT2Vec.md
@@ -106,7 +106,7 @@ significance`:
 Here the correct answer is ranked third. Overall, the model ranked the correct
 answer first about 20% of the time. The distribution of answers is as follows:
 
-![Word2Vec Results on SAT Analogies]({{ site.url }}/files/sat2vec/analogies_ranking.png)
+![Word2Vec Results on SAT Analogies]({{ site.url }}/files/sat2vec/analogies_ranking.svg)
 
 So our model isn't getting into Berkeley anytime soon; maybe it should try
 applying to Stanford instead? (Go bears!)
