--- a/files/sat2vec/Word2Vec SAT.ipynb
+++ b/files/sat2vec/Word2Vec SAT.ipynb
@@ -507,7 +507,8 @@
     "plt.title(\"Word2Vec Results on SAT Analogies\", fontsize=FONTSIZE)\n",
     "\n",
     "# Save and show the figure\n",
-    "plt.savefig(\"/tmp/analogies_ranking.png\")\n",
+    "plt.savefig(\"/tmp/analogies_ranking.png\", bbox_inches='tight')\n",
+    "plt.savefig(\"/tmp/analogies_ranking.svg\", bbox_inches='tight')\n",
     "\n",
     "plt.show()"
    ]
@@ -529,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
