--- a/_posts/2016-07-11-SAT2Vec.md
+++ b/_posts/2016-07-11-SAT2Vec.md
@@ -5,6 +5,7 @@ description: >
   Could Word2Vec pass the SAT analogies section and get accepted to a good
   college? I take a pre-trained model and find out!
 image: /files/sat2vec/analogies_ranking.png
+redirect_from: /2016/07/11/SAT2Vec/
 ---
 
 Word embeddings, like [Word2Vec][Word2Vec_paper] and [GloVe][GloVe_site], have
