--- a/_posts/2016-07-11-SAT2Vec.md
+++ b/_posts/2016-07-11-SAT2Vec.md
@@ -1,12 +1,15 @@
 ---
 layout: post
-title: "SAT2Vec: Word2Vec versus SAT Analogies"
+title: "SAT2Vec: Word2Vec Versus SAT Analogies"
 description: >
   Could Word2Vec pass the SAT analogies section and get accepted to a good
   college? I take a pre-trained model and find out!
-image: /files/sat2vec/analogies_ranking.png
+image: /files/sat2vec/Pasternak_The_Night_Before_the_Exam.jpg
 redirect_from: /2016/07/11/SAT2Vec/
 ---
+
+![Leonid Pasternak's painting The Night Before the Exam]({{ site.url
+}}/files/sat2vec/Pasternak_The_Night_Before_the_Exam.jpg)
 
 Word embeddings, like [Word2Vec][Word2Vec_paper] and [GloVe][GloVe_site], have
 proved to be a powerful way of representing text for machine learning
@@ -54,7 +57,7 @@ analogies?
 To find out, I grabbed Google's [pretrained Word2Vec model][w2v_model], which
 was trained on Google News, and then scraped 37 practice SAT analogies with
 answers from various websites. Once I had the analogies, I calculated the
-difference between the vectors for each pair of words. For example, for 
+difference between the vectors for each pair of words. For example, for
 `King : Man :: Queen : Woman`, I would calculate the vector sum for `King −
 Man` and also for `Queen − Woman`. I then computed the cosine distance between
 the vectors from the prompt pair of words and the potential answer pairs and
