--- a/_posts/2016-07-11-SAT2Vec.md
+++ b/_posts/2016-07-11-SAT2Vec.md
@@ -113,8 +113,8 @@ answer first about 20% of the time. The distribution of answers is as follows:
 ![Word2Vec Results on SAT Analogies]({{ site.url }}/files/sat2vec/analogies_ranking.svg)
 
 So our model isn't getting into Berkeley anytime soon; maybe it should try
-applying to Stanford instead? (Go bears!)
+applying to Stanford instead? (Go Bears!)
 
 The model's answer for all 37 analogies can be found [here][results].
 
-[results]: {{ site.url }}/files/sat2vec/results.md
+[results]: {{ site.url }}/blog/sat2vec/results/
