Fix poor writing in vim-eldar post
Thanks to @chizarlicious for naming and shaming.

--- a/_posts/2016-12-23-vim_eldar.md
+++ b/_posts/2016-12-23-vim_eldar.md
@@ -28,10 +28,10 @@ Eldar is based on [elflord][elcs], one of the default Vim color schemes. I
 discovered it when I first started using Vim, and I grew to love its 16 bright
 colors. But elflord isn't actually a 16 color scheme, so when I finally fixed
 my terminal to use all 256 colors, elflord no longer looked the way I wanted.
-I decided to create my own color scheme that would always look the way I
-wanted. The fact that designing the scheme served double duty as [structured
-procrastination][sp] to avoid [my thesis][thesis] (also written in Vim) was
-merely a bonus!
+I decided to create my own color scheme, one designed to use only 16 colors
+from the start. The fact that designing the scheme served double duty as
+[structured procrastination][sp] to avoid [my thesis][thesis] (also written in
+Vim) was merely a bonus!
 
 [elcs]: https://github.com/vim/vim/blob/master/runtime/colors/elflord.vim
 [sp]: http://www.chronicle.com/article/How-to-ProcrastinateStill/93959
