Add `{{ file_dir }}` variable to posts

--- a/_posts/2016-07-11-SAT2Vec.md
+++ b/_posts/2016-07-11-SAT2Vec.md
@@ -8,8 +8,10 @@ image: /files/sat2vec/Pasternak_The_Night_Before_the_Exam.jpg
 redirect_from: /2016/07/11/SAT2Vec/
 ---
 
-![Leonid Pasternak's painting The Night Before the Exam]({{ site.url
-}}/files/sat2vec/Pasternak_The_Night_Before_the_Exam.jpg)
+{% capture file_dir %}{{ site.url }}/files/sat2vec{% endcapture %}
+
+![Leonid Pasternak's painting The Night Before the Exam]({{ file_dir
+}}/Pasternak_The_Night_Before_the_Exam.jpg)
 
 Word embeddings, like [Word2Vec][Word2Vec_paper] and [GloVe][GloVe_site], have
 proved to be a powerful way of representing text for machine learning
@@ -73,10 +75,10 @@ data][analogies_json] and [pretrained model][model_json]. The model has been
 stripped down to only contain the words that appear in the analogies to save
 space.
 
-[notebook]: {{ site.url }}/files/sat2vec/Word2Vec SAT.ipynb
+[notebook]: {{ file_dir }}/Word2Vec SAT.ipynb
 [notebook_rendered]: https://github.com/agude/agude.github.io/blob/master/files/sat2vec/Word2Vec%20SAT.ipynb
-[analogies_json]: {{ site.url }}/files/sat2vec/analogies.json
-[model_json]: {{ site.url }}/files/sat2vec/vectors.json
+[analogies_json]: {{ file_dir }}/analogies.json
+[model_json]: {{ file_dir }}/vectors.json
 
 ## Results
 
@@ -110,7 +112,7 @@ significance`:
 Here the correct answer is ranked third. Overall, the model ranked the correct
 answer first about 20% of the time. The distribution of answers is as follows:
 
-![Word2Vec Results on SAT Analogies]({{ site.url }}/files/sat2vec/analogies_ranking.svg)
+![Word2Vec Results on SAT Analogies]({{ file_dir }}/analogies_ranking.svg)
 
 So our model isn't getting into Berkeley anytime soon; maybe it should try
 applying to Stanford instead? (Go Bears!)
