--- a/_posts/2016-12-23-vim_eldar.md
+++ b/_posts/2016-12-23-vim_eldar.md
@@ -7,7 +7,9 @@ description: >
 image: /files/vim_eldar/eldar_logo.png
 ---
 
-![The Eldar color scheme logo]({{ site.url }}/files/vim_eldar/eldar_logo.svg)
+{% capture file_dir %}{{ site.url }}/files/vim_eldar{% endcapture %}
+
+![The Eldar color scheme logo]({{ file_dir }}/eldar_logo.svg)
 
 I use [Vim][vim] (actually [Neovim][neovim]) as my primary text editor. I
 write Python in it, against all advice I write C++ in it, and I even write
@@ -49,8 +51,8 @@ checking turned on and the word '_Fibonacci_' highlighted:
 
 [tango]: http://tango.freedesktop.org/Tango_Icon_Theme_Guidelines#Color_Palette
 
-![An example Python file using the Eldar color scheme]({{ site.url
-}}/files/vim_eldar/eldar_python.png)
+![An example Python file using the Eldar color scheme]({{ file_dir
+}}/eldar_python.png)
 
 ### Comparison
 
@@ -67,7 +69,7 @@ browser or document editor.
 A comparison of Eldar to 16 color elflord is shown below. Spell checking is
 turned on and the word '_Handle_' has been highlighted.
 
-![Eldar vs elflord gif]({{ site.url }}/files/vim_eldar/eldar_elflord_cpp.gif)
+![Eldar vs elflord gif]({{ file_dir }}/eldar_elflord_cpp.gif)
 
 ### Installation
 
