Add `image_alt` variable for each post
This variable sets the alt text of the image pointed to by the `image`
variable and a way that can be used in the page itself and article
cards.

--- a/_posts/2016-12-23-vim_eldar.md
+++ b/_posts/2016-12-23-vim_eldar.md
@@ -5,11 +5,16 @@ description: >
   Check out Eldar, my custom Vim color scheme based on elflord. It is a
   bright, high-contrast theme that looks great in the terminal or GUI!
 image: /files/vim_eldar/eldar_logo.png
+image_alt: >
+  "The Eldar color scheme logo. It is the word Eldar in grey on a black
+  background. The word is underlined with a line broken into six segments. The
+  segments are red, yellow, green, cyan, blue, and purple, and match the
+  colors used in the color scheme."
 ---
 
 {% capture file_dir %}{{ site.url }}/files/vim_eldar{% endcapture %}
 
-![The Eldar color scheme logo]({{ file_dir }}/eldar_logo.svg)
+![{{ page.image_alt }}]({{ file_dir }}/eldar_logo.svg)
 
 I use [Vim][vim] (actually [Neovim][neovim]) as my primary text editor. I
 write Python in it, against all advice I write C++ in it, and I even write
