Add `lead_image.html` template
This template replaces code like:

```html
![{{ page.image_alt }}]({{ site.url }}{{ page.image }})
```

This snippet used to have to be included on each post page with a lead
image, but can now be replaced with the template. The template is
transcluded before variables are expanded, so it can read `page`
variables directly.

--- a/_posts/2016-12-23-vim_eldar.md
+++ b/_posts/2016-12-23-vim_eldar.md
@@ -14,7 +14,7 @@ image_alt: >
 
 {% capture file_dir %}{{ site.url }}/files/vim_eldar{% endcapture %}
 
-![{{ page.image_alt }}]({{ file_dir }}/eldar_logo.svg)
+{% include lead_image.html %}
 
 I use [Vim][vim] (actually [Neovim][neovim]) as my primary text editor. I
 write Python in it, against all advice I write C++ in it, and I even write
