Remove absolute links in posts

--- a/_posts/2016-07-11-SAT2Vec.md
+++ b/_posts/2016-07-11-SAT2Vec.md
@@ -13,10 +13,9 @@ image_alt: >
 redirect_from: /2016/07/11/SAT2Vec/
 ---
 
-{% capture file_dir %}{{ site.url }}/files/sat2vec{% endcapture %}
+{% capture file_dir %}/files/sat2vec{% endcapture %}
 
-![Leonid Pasternak's painting The Night Before the Exam]({{ file_dir
-}}/Pasternak_The_Night_Before_the_Exam.jpg)
+{% include lead_image.html %}
 
 Word embeddings, like [Word2Vec][Word2Vec_paper] and [GloVe][GloVe_site], have
 proved to be a powerful way of representing text for machine learning
@@ -124,4 +123,4 @@ applying to Stanford instead? (Go Bears!)
 
 The model's answer for all 37 analogies can be found [here][results].
 
-[results]: {{ site.url }}/blog/sat2vec/results/
+[results]: /blog/sat2vec/results/
