--- a/_posts/2016-12-23-vim_eldar.md
+++ b/_posts/2016-12-23-vim_eldar.md
@@ -12,7 +12,7 @@ image_alt: >
   colors used in the color scheme."
 ---
 
-{% capture file_dir %}{{ site.url }}/files/vim_eldar{% endcapture %}
+{% capture file_dir %}/files/vim_eldar{% endcapture %}
 
 {% include lead_image.html %}
 
