--- a/404.md
+++ b/404.md
@@ -7,4 +7,4 @@ permalink: "404.html"
 # 404: Page not found
 
 Sorry, we've misplaced that URL or it's pointing to something that doesn't
-exist. [Head back home]({{ site.url }}) to try finding it again.
+exist. [Head back home](/) to try finding it again.
