Use `uri_escape` to encode `.ipynb` URIs

--- a/_posts/2016-07-11-SAT2Vec.md
+++ b/_posts/2016-07-11-SAT2Vec.md
@@ -74,13 +74,15 @@ otherwise it would be further away.
 [w2v_model]: https://drive.google.com/file/d/0B7XkCwpI5KDYNlNUTTlSS21pQmM/edit?usp=sharing
 
 You can find the Jupyter Notebook used to run the model [here][notebook]
-([Rendered on Github][notebook_rendered]). You will need the [analogies
+([Rendered on Github][rendered]). You will need the [analogies
 data][analogies_json] and [pretrained model][model_json]. The model has been
 stripped down to only contain the words that appear in the analogies to save
 space.
 
-[notebook]: {{ file_dir }}/Word2Vec SAT.ipynb
-[notebook_rendered]: https://github.com/agude/agude.github.io/blob/master/files/sat2vec/Word2Vec%20SAT.ipynb
+{% capture notebook_uri %}{{ "Word2Vec SAT.ipynb" | uri_escape }}{% endcapture %} 
+
+[notebook]: {{ file_dir }}/{{ notebook_uri }}
+[rendered]: https://github.com/agude/agude.github.io/blob/master{{ file_dir }}/{{ notebook_uri }}
 [analogies_json]: {{ file_dir }}/analogies.json
 [model_json]: {{ file_dir }}/vectors.json
 
