Minor code improvement

--- a/files/supernova-plot-update/New Plot.ipynb
+++ b/files/supernova-plot-update/New Plot.ipynb
@@ -112,6 +112,8 @@
     "\n",
     "    # Plot\n",
     "    plot = plt.plot(wavelengths, fluxes, label=labels[i])\n",
+    "    # These numbers below were selected through trial and error\n",
+    "    # to offset the spectra date labels nicely\n",
     "    text_y = 10.8 - (2.9 * i)\n",
     "    ax.text(6900, text_y, labels[i], fontsize=20, color=plot[0].get_color())\n",
     "\n",
