Change links in posts to use HTTPS where possible

--- a/_posts/2016-07-11-SAT2Vec.md
+++ b/_posts/2016-07-11-SAT2Vec.md
@@ -27,7 +27,7 @@ requirement: words that are not close to each other in the text should not be
 close to each other in the vector space.
 
 [Word2Vec_paper]: https://papers.nips.cc/paper/5021-distributed-representations-of-words-and-phrases-and-their-compositionality.pdf
-[GloVe_site]: http://nlp.stanford.edu/projects/glove/
+[GloVe_site]: https://nlp.stanford.edu/projects/glove/
 
 ## Analogies
 
