--- a/_posts/2016-12-23-vim_eldar.md
+++ b/_posts/2016-12-23-vim_eldar.md
@@ -24,7 +24,7 @@ simple `git pull`. This has made it worth spending time customizing Vim to be
 exactly the editor I want; one of those customizations is my color scheme:
 [**Eldar**][eldar].
 
-[vim]: http://www.vim.org
+[vim]: https://www.vim.org
 [neovim]: https://neovim.io
 [dotfiles]: https://github.com/agude/dotfiles/tree/master/vim
 [eldar]: https://github.com/agude/vim-eldar
@@ -41,8 +41,8 @@ from the start. The fact that designing the scheme served double duty as
 Vim) was merely a bonus!
 
 [elcs]: https://github.com/vim/vim/blob/master/runtime/colors/elflord.vim
-[sp]: http://www.chronicle.com/article/How-to-ProcrastinateStill/93959
-[thesis]: http://hdl.handle.net/11299/175445
+[sp]: https://www.chronicle.com/article/How-to-ProcrastinateStill/93959
+[thesis]: https://hdl.handle.net/11299/175445
 
 ### Colors
 
