Update insight draft and add images

--- a/_drafts/2018-08-14-insight.md
+++ b/_drafts/2018-08-14-insight.md
@@ -5,12 +5,22 @@ description: >
   Insight promises an easy transition to a career in data science or machine
   learning, but is it the right program for you? I have a few words of advice
   offered from experience.
-image: /files/
+image: /files/insight/stanford_dish_by_jawed_cc_by_3.jpg
+image: /files/insight/stanford_dish_in_the_early_morning_hours_by_brianhama_cc_by_sa_4.jpg
+image_alt: >
+  The Stanford Dish, a large radio telescope, in the early morning light. The
+  sky is purple and blue, and the dish is a white metal-lattice structure
+  glowing softly pink in the light. At the top of the dish is a red light.
 ---
 
+{% capture file_dir %}/files/insight/{% endcapture %}
+
+{% include lead_image.html %}
+
 Following [Neha's][neha] [advice][advice] about writing a blog post for any
-email you've written over and over, I thought I'd answer a question I get
-often: "Should I attend [Insight Data Science][insight]?"
+email that you've written over and over, I thought I'd answer a question I get
+often: "I'm trying to get a job in data science; should I attend
+[Insight][insight]?"
 
 [neha]: https://twitter.com/nerdneha
 [advice]: https://twitter.com/math_rachel/status/822958139343446016
@@ -18,30 +28,44 @@ often: "Should I attend [Insight Data Science][insight]?"
 
 I'm qualified to answer this question because I was an Insight fellow in June
 of 2015 in the data science track (DS-SV-2015B). That, of course, is also my
-bias: I found my current job through Insight, made a bunch of friends, and am
-happy with the experience in general. That said, it isn't for everyone.
+bias: I found my current and previous job through Insight, made a bunch of friends, and am
+happy with the experience in general. I am also a technical adviser, meaning I
+mentor the fellows weekly in exchange for a small bit of equity in the
+company.[^1]
 
 ## What is Insight?
 
-At it's simplest, Insight is a program to help people find jobs in data
+Insight is a program to help people find jobs in data
 science related fields. They have [data science][insight], [health data
-science][health], [data engineering][de], and [machine learning][ai] tracks
-scatted across four areas: Boston, New York, Seattle, and the Bay Area. The
-data science tracks accept solely PhDs, while the others accept PhDs and other
-technically minded folks. Each program runs for about three months and at the
-end you (ideally) have a job.
+science][health], [data engineering][de], [machine learning][ai],
+[DevOps][dev], and [data PM][pm] tracks scatted across a few regions: Boston,
+New York, Seattle, Toronto, and the Bay Area. They also have a remote session.
+The data science tracks accept solely PhDs, while the others accept PhDs and
+other technically minded folks. Each program runs for about three months and
+at the end you (ideally) have a job.
 
 [health]: https://www.insighthealthdata.com/
 [de]: https://www.insightdataengineering.com/
 [ai]: https://www.insightdata.ai/
+[dev]: https://www.insightdevops.com/
+[pm]: https://www.insightdatapm.com/
+
+I went through the Silicon Valley data science track, so that I what I'll
+focus on.
 
 ## What Would I Do There?
 
-Insight isn't like graduate school or college. There are only a few lectures
-on data science and related topics (start ups and equity, tech interviews,
-offer negotiation, SQL, etc.); most of the learning is project based. When you
-start Insight, you pick a data project and spend the first few weeks
-(feverishly) working on it! Each program is structured roughly like this:
+Insight isn't like graduate school or college. There are a few talks covering
+a variety of useful topics---like SQL, start ups and equity, tech interviews,
+etc.---but the majority of the learning is project based. You pick a project
+and then spend a few weeks (feverishly) working on it, learning by doing and
+by talking to the people around you. I wrote about my project,
+[WhereTo.Photo][my_project], if you are interested in what one of these
+projects looks like.
+
+[my_project]: {% post_url 2016-09-22-whereto_photo %}
+
+The program is structured roughly like this:
 
 - 4 weeks of building a data project
 - 3 weeks of demoing the project at various companies
@@ -55,54 +79,69 @@ other for help with your projects. Everyone is an expert at something, and a
 novice at something else.
 
 While you build your project, companies will come present what they do and why
-they need data scientist. After your project is completed you will put
+they need data scientists. After your project is completed you will put
 together a list of the companies that you are interested in talking to and
 will get to demo at **some, but not all**, of them because the number of
 people who can demo at a specific company is limited. Over the next few weeks
-you will give a short demonstration and presentation of your project at about
-eight companies, and some of them will want to take the next step and
-interview you. When not demoing, you will practice interviewing and brush up
-on all the topics you are unsure of.
+you will give a short demonstration and presentation on your project at a
+handful of companies (eight per fellow during my session), and some of them
+will want to take the next step and interview you. When not demoing, you will
+practice interviewing and brush up on all the topics you are unsure of.
 
 ## Why Should I Go?
+
+![A landscape of the Stanford hills including the Stanford Dish shrouded in
+light fog. The sun is setting behind the dish making the sky appear bright
+white.][dish_2]
+
+[dish_2]: {{ file_dir}}/stanford_dish_by_jawed_cc_by_3.jpg
 
 ### Lots of Exposure
 
 Insight is a great way to get a quick survey of about thirty companies in the
 area that are all hiring data scientists. From my position in Minnesota I knew
 of the big name companies (Apple, Google, Facebook, etc.) but not really any
-of the medium or small companies. One of these small companies (the one I
-currently work for) was the perfect fit for me, and I would have never found
+of the medium or small companies. One of these small companies was the perfect
+fit for me and I spent two great years working there; I never would have found
 them without Insight to make the introduction.
 
 ### A Killer Network
 
-Insight is also a great way to build a professional network. They have around
-a thousand alumni now scattered all across the country. Friends from my
-session now work at numerous startups as well as major companies like:
+Insight is also a great way to build a professional network. There over a
+thousand alumni scattered all across the country. Friends from my session now
+work at numerous startups as well as major companies like:
+AdRoll, 
+Airbnb, 
+Facebook, 
+Google, 
+Instagram, 
+Intuit, 
+Kabaam!, 
+LinkedIn, 
+Netflix, 
+Salesforce, 
+SambaTV, 
+Silicon Valley Data Science, 
+Stitch Fix, 
+and
+VEVO.
 
-- AdRoll
-- AirBNB
-- Facebook
-- Google
-- Kabaam!
-- LinkedIn
-- Netflix
-- Salesforce
-- SambaTV
-- Silicon Valley Data Science
-- Stitch Fix
-- VEVO
+Building my professional network without Insight would have been much harder.
+And such a network is incredibly valuable; every interview (but one) that I
+went to 
 
-This network would have been hard to replicate on my own!
+etwork is how I found my
+second job at [Intuit][intuit]!
+
+[intuit]: https://intuit.com
 
 ### Great Friends and Community
 
-Finally, I've made friends from among the people who went to Insight with me.
-This might seem like a minor point, but if you're picking up your life and
-moving across the country it is great to have a group you can hang out with. I
-regularly go on bike rides, play board games, or just get dinner with the
-people from my session.
+Finally, I've made great friends from among the people who went to Insight
+with me. This might seem like a minor point, but if you're picking up your
+life and moving across the country it is great to have a group you can hang
+out with. I regularly go on bike rides, play board games, or just get dinner
+with the people from my session.
 
 ## Sounds Great! What's the Catch?
 
@@ -111,16 +150,16 @@ Insight:
 
 ### Insight is _Free_, but **EXPENSIVE**
 
-Insight doesn't charge the fellows anything. In fact, they even provide
-need-based scholarships to some. Still, living without a job for three or four
-months is hard. In the Bay Area that will probably cost you about $2000 a
-month in rent (although you can find cheaper if you have roommates). Insight
-isn't your employer, so you won't have health insurance unless you still have
-it from your school (mine lasted over the summer after I graduated,
-thankfully) or buy it yourself. I had a good amount of savings from grad
-school which were just about wiped out by the three months renting in Palo
-Alto, and I have friends who charged up their credit cards heavily to get by.
-We are all doing fine now, but it was stressful before we had job offers.
+Insight doesn't charge the fellows anything, and they even offer a limited
+number of need-based scholarships to help cover expenses. Still, living
+without a job for three or four months is hard. In the Bay Area that will
+probably cost you about $2000 a month in rent. Insight isn't your employer, so
+you won't have health insurance unless you still have it from your school
+(mine lasted over the summer after I graduated, thankfully) or buy it
+yourself. I had a good amount of savings from grad school which were just
+about wiped out by the three months renting in Palo Alto, and other fellows in
+my session charged up their credit cards to get by. We are all doing fine now,
+but it was stressful before we had job offers.
 
 ### Not Everyone Finds a Job in Three Months
 
@@ -149,3 +188,7 @@ over and over and over again.
 
 So should you go? I think, for me, it was worth it because the benefits you I
 got from Insight live on well after the program.
+
+---
+
+[^1]: About 221 shares with an estimated value of $158. For the record, they also buy me dinner when I come in to mentor after work.
