More edits to the Insight draft

--- a/_drafts/2018-08-14-insight.md
+++ b/_drafts/2018-08-14-insight.md
@@ -35,58 +35,50 @@ company.[^1]
 
 ## What is Insight?
 
-Insight is a program to help people find jobs in data
-science related fields. They have [data science][insight], [health data
-science][health], [data engineering][de], [machine learning][ai],
-[DevOps][dev], and [data PM][pm] tracks scatted across a few regions: Boston,
-New York, Seattle, Toronto, and the Bay Area. They also have a remote session.
-The data science tracks accept solely PhDs, while the others accept PhDs and
-other technically minded folks. Each program runs for about three months and
-at the end you (ideally) have a job.
-
-[health]: https://www.insighthealthdata.com/
-[de]: https://www.insightdataengineering.com/
-[ai]: https://www.insightdata.ai/
-[dev]: https://www.insightdevops.com/
-[pm]: https://www.insightdatapm.com/
-
-I went through the Silicon Valley data science track, so that I what I'll
-focus on.
+Insight is a program to help people find jobs in data science related fields.
+Their initial program was the [data science][insight] track---which I will
+discuss in the remained of this post---but they have also expanded to cover
+various other data-related fields as well. The data science program is offered
+multiple cities: Boston, New York, Seattle, Toronto, and the Bay Area. There
+is also a remote session that is entirely online. They accept solely PhDs,
+mostly from technical fields but with a few other technically minded folk with
+liberal arts PhDs. Each program runs for about three months and at the end you
+will (ideally) have a job.
 
 ## What Would I Do There?
 
-Insight isn't like graduate school or college. There are a few talks covering
-a variety of useful topics---like SQL, start ups and equity, tech interviews,
-etc.---but the majority of the learning is project based. You pick a project
-and then spend a few weeks (feverishly) working on it, learning by doing and
-by talking to the people around you. I wrote about my project,
-[WhereTo.Photo][my_project], if you are interested in what one of these
-projects looks like.
+Insight isn't like graduate school. While there are a few talks covering a variety
+of useful topics---SQL, start ups and equity, tech interviews, etc.---the
+majority of the learning is project based. You pick a project and then spend a
+few weeks (feverishly) working on it, learning by doing and by talking to the
+people around you. I wrote about my project, [WhereTo.Photo][my_project], if
+you are interested in what one of these projects looks like.
 
 [my_project]: {% post_url 2016-09-22-whereto_photo %}
 
-The program is structured roughly like this:
+The program is structured like this:
 
 - 4 weeks of building a data project
 - 3 weeks of demoing the project at various companies
 - 3+ weeks of interviewing with companies you demoed at
 
-Through out the program you receive guidance from the Insight staff (many of
-whom were hired out of the program), previous fellows, and the other fellows
-that make up your session. This last group shouldn't be understated: you will
-learn a lot from the other fellows going through the program as you ask each
-other for help with your projects. Everyone is an expert at something, and a
-novice at something else.
+Throughout the program you receive guidance from the Insight staff (many of
+whom were hired out of the program), industry mentors, previous fellows, and
+the other fellows that make up your session. This last group **shouldn't be
+underestimated**: you learn a lot from the other fellows as you ask each other
+for help with your projects. Everyone is an expert at something, and a novice
+at something else.
 
-While you build your project, companies will come present what they do and why
-they need data scientists. After your project is completed you will put
-together a list of the companies that you are interested in talking to and
-will get to demo at **some, but not all**, of them because the number of
-people who can demo at a specific company is limited. Over the next few weeks
-you will give a short demonstration and presentation on your project at a
-handful of companies (eight per fellow during my session), and some of them
-will want to take the next step and interview you. When not demoing, you will
-practice interviewing and brush up on all the topics you are unsure of.
+During this time, companies come present what they do and why they need
+data scientists. After your project is completed, you put together a list of
+the companies that you are interested in talking to. You will get to demo at
+**some**, **but not all**, of them because the number of people who can demo
+at any company is limited.
+
+Over the next few weeks you show off your project at some of the companies
+that you selected (eight per fellow during my session). Some of those
+companies will want to take the next step and interview you. When not demoing,
+you practice interviewing and brush up on all the topics you are unsure of.
 
 ## Why Should I Go?
 
