Further updates to draft

--- a/_drafts/2018-08-14-insight.md
+++ b/_drafts/2018-08-14-insight.md
@@ -48,7 +48,7 @@ will (ideally) have a job.
 ## What Would I Do There?
 
 Insight isn't like graduate school. While there are a few talks covering a variety
-of useful topics---SQL, start ups and equity, tech interviews, etc.---the
+of useful topics---SQL, startups and equity, tech interviews, etc.---the
 majority of the learning is project based. You pick a project and then spend a
 few weeks (feverishly) working on it, learning by doing and by talking to the
 people around you. I wrote about my project, [WhereTo.Photo][my_project], if
@@ -69,11 +69,11 @@ underestimated**: you learn a lot from the other fellows as you ask each other
 for help with your projects. Everyone is an expert at something, and a novice
 at something else.
 
-During this time, companies come present what they do and why they need
-data scientists. After your project is completed, you put together a list of
-the companies that you are interested in talking to. You will get to demo at
-**some**, **but not all**, of them because the number of people who can demo
-at any company is limited.
+During the first few weeks, companies come by to present what they do and why
+they need data scientists. After all the companies have presented you put
+together a list of the companies that you are interested in. You will get to
+demo at **some**, **but not all**, of them, because the number of people who
+can demo at any particular company is limited.
 
 Over the next few weeks you show off your project at some of the companies
 that you selected (eight per fellow during my session). Some of those
@@ -91,17 +91,17 @@ white.][dish_2]
 ### Lots of Exposure
 
 Insight is a great way to get a quick survey of about thirty companies in the
-area that are all hiring data scientists. From my position in Minnesota I knew
-of the big name companies (Apple, Google, Facebook, etc.) but not really any
-of the medium or small companies. One of these small companies was the perfect
-fit for me and I spent two great years working there; I never would have found
-them without Insight to make the introduction.
+area that are all hiring data scientists. From Minnesota I knew of the big
+name companies in Silicon Valley (Apple, Google, Facebook, etc.) but not
+really any of the medium or small companies. One of those small companies was
+the perfect fit for me and I spent two great years working there; I never
+would have found them without Insight to make the introduction.
 
 ### A Killer Network
 
 Insight is also a great way to build a professional network. There over a
 thousand alumni scattered all across the country. Friends from my session now
-work at numerous startups as well as major companies like:
+work at a wide variety of companies, including:
 AdRoll, 
 Airbnb, 
 Facebook, 
@@ -118,68 +118,70 @@ Stitch Fix,
 and
 VEVO.
 
-Building my professional network without Insight would have been much harder.
-And such a network is incredibly valuable; every interview (but one) that I
-went to 
-
-etwork is how I found my
-second job at [Intuit][intuit]!
-
-[intuit]: https://intuit.com
+This network is incredibly valuable---it is how I found my second job---and it
+would have been hard to build without Insight.
 
 ### Great Friends and Community
 
-Finally, I've made great friends from among the people who went to Insight
-with me. This might seem like a minor point, but if you're picking up your
-life and moving across the country it is great to have a group you can hang
-out with. I regularly go on bike rides, play board games, or just get dinner
-with the people from my session.
+Finally, I've made great friends from among the people who went through
+Insight with me. This might seem like a minor point, but if you're picking up
+your life and moving across the country it is great to have a group you can
+hang out with. I regularly go on bike rides, play board games, or just get
+dinner with the people from my session.
 
 ## Sounds Great! What's the Catch?
-
-Here are some things to consider before you accept your invitation to join
-Insight:
 
 ### Insight is _Free_, but **EXPENSIVE**
 
 Insight doesn't charge the fellows anything, and they even offer a limited
 number of need-based scholarships to help cover expenses. Still, living
-without a job for three or four months is hard. In the Bay Area that will
-probably cost you about $2000 a month in rent. Insight isn't your employer, so
-you won't have health insurance unless you still have it from your school
-(mine lasted over the summer after I graduated, thankfully) or buy it
-yourself. I had a good amount of savings from grad school which were just
-about wiped out by the three months renting in Palo Alto, and other fellows in
-my session charged up their credit cards to get by. We are all doing fine now,
-but it was stressful before we had job offers.
+without a job for three or four months is hard. Rent in the Bay Area will set
+you back around $2000 a month. My wife and I had a good amount of savings, but
+it was just about wiped out renting for three months without a second source
+of income. We did not have to fall back on our credit cards, but I know
+fellows who needed to.
+
+Insight is also not your employer, so you will have to get health insurance
+somewhere else. My graduate school insurance lasted over the summer, but this
+is not the case for everyone.
 
 ### Not Everyone Finds a Job in Three Months
 
-Insight claims that the vast majority of fellows find a job in the industry,
-and this is true, but they don't promise that it will happen within the three
-months. Everyone in my session who stuck with it got a job that they loved in
-data science, but for a few of them it took a long time. About a third of my
-class had offers within a week or two, another third took about a month or
-slightly longer, and the last third dragged out over a few months with one or
-two of my friends taking four or more months. I've known fellows in other
-sessions who have taken six months of interviewing to get an offer.
+[Insight says that the vast majority of fellows find a job in the
+industry][faq], and this is true, but they don't promise that it will happen
+within the three months. Everyone in my session who stuck with it got a job
+that they loved in data science, but for a few of them it took a long time.
+About a third of my class had offers within a week or two, another third took
+about a month or slightly longer, and the last third dragged out over a few
+months with one or two of my friends taking more than four months. I've known
+fellows in other sessions who have taken six months of interviewing to get an
+offer.
+
+[faq]: https://www.insightdatascience.com/faq
 
 ### You Need to Know How To Code
 
 Data scientists need to know how to work with data, but they also need to know
-how to code. A good grasp of at least one language is a must, and it would be
-very tough to pick up coding from scratch at Insight. If you can't write
-[FizzBuzz][fizz] then you will have catching up to do. This is especially true
-for machine learning positions, which have interviews that more closely follow
-the "standard" developer interview pattern of writing code on the white board
-over and over and over again.
+how to code. [A good grasp of at least one language is a must][prepare], and
+it would be very tough to pick up coding from scratch at Insight. If you can't
+write [FizzBuzz][fizz] then you will have catching up to do. This is
+especially true for machine learning positions, which have interviews that
+more closely follow the "standard" developer interview pattern of writing code
+on the whiteboard over and over and over again.
 
+[prepare]: https://blog.insightdatascience.com/preparing-for-the-transition-to-data-science-e9194c90b42c
 [fizz]: https://imranontech.com/2007/01/24/using-fizzbuzz-to-find-developers-who-grok-coding/
 
 ## Final Thoughts
 
-So should you go? I think, for me, it was worth it because the benefits you I
-got from Insight live on well after the program.
+I believe giving someone all the information they need to make an informed
+decision. That's why I wrote this post. I think Insight is worth the costs,
+but I wanted to make those costs known ahead of time. In the end, I would go
+through the program again. It helped my career get off to a great start by
+finding the perfect first company for me. Could I have gotten a data science
+job without Insight? Probably, but the experience certainly would have been
+more painful, and I don't think I would be as happy with the outcome because
+the network I built has really helped expand my possibilities.
 
 ---
 
