--- a/_posts/2016-07-11-SAT2Vec.md
+++ b/_posts/2016-07-11-SAT2Vec.md
@@ -118,7 +118,9 @@ significance`:
 Here the correct answer is ranked third. Overall, the model ranked the correct
 answer first about 20% of the time. The distribution of answers is as follows:
 
-![Word2Vec Results on SAT Analogies]({{ file_dir }}/analogies_ranking.svg)
+[![Word2Vec Results on SAT Analogies][analogies_plot]][analogies_plot]
+
+[analogies_plot]: {{ file_dir }}/analogies_ranking.svg
 
 So our model isn't getting into Berkeley anytime soon; maybe it should try
 applying to Stanford instead? (Go Bears!)
