Update Vim-Eldar post
Two changes:

- Linked lead image to the github
- Linked thesis to my blog post instead of the actual thesis

--- a/_posts/2016-12-23-vim_eldar.md
+++ b/_posts/2016-12-23-vim_eldar.md
@@ -14,7 +14,8 @@ image_alt: >
 
 {% capture file_dir %}/files/vim_eldar{% endcapture %}
 
-{% include lead_image.html %}
+{% comment %}{% include lead_image.html %} removed and hardcoded. {% endcomment %}
+[![{{ page.image_alt }}]({{ page.image }})][eldar]
 
 I use [Vim][vim] (actually [Neovim][neovim]) as my primary text editor. I
 write Python in it, against all advice I write C++ in it, and I even write
@@ -42,7 +43,7 @@ Vim) was merely a bonus!
 
 [elcs]: https://github.com/vim/vim/blob/master/runtime/colors/elflord.vim
 [sp]: https://www.chronicle.com/article/How-to-ProcrastinateStill/93959
-[thesis]: https://hdl.handle.net/11299/175445
+[thesis]: {% post_url 2018-05-20-my_phd_thesis %}
 
 ### Colors
 
