--- a/_posts/2016-12-23-vim_eldar.md
+++ b/_posts/2016-12-23-vim_eldar.md
@@ -10,6 +10,7 @@ image_alt: >
   background. The word is underlined with a line broken into six segments. The
   segments are red, yellow, green, cyan, blue, and purple, and match the
   colors used in the color scheme."
+categories: how_i_work
 ---
 
 {% capture file_dir %}/files/vim_eldar{% endcapture %}
