Change liquid code blocks to Markdown fenced ones

--- a/_posts/2016-12-23-vim_eldar.md
+++ b/_posts/2016-12-23-vim_eldar.md
@@ -86,19 +86,19 @@ example, with [vim-plug][plug]:
 [file]: https://github.com/agude/vim-eldar/blob/master/colors/eldar.vim
 [plug]: https://github.com/junegunn/vim-plug
 
-{% highlight vim %}
+```vim
 Plug 'agude/vim-eldar'
-{% endhighlight %}
+```
 
 You can activate the color scheme with:
 
-{% highlight vim %}
+```vim
 :colorscheme eldar
-{% endhighlight %}
+```
 
 Or put it in your `.vimrc` so it activates every time you open Vim:
 
-{% highlight vim %}
+```vim
 "------------------------
 " Syntax: highlighting
 "------------------------
@@ -106,7 +106,7 @@ if has('syntax')
     syntax enable             " Turn on syntax highlighting
     silent! colorscheme eldar " Custom color scheme
 endif
-{% endhighlight %}
+```
 
 Give Eldar a try! If something doesn't work, please report it on [Eldar's
 Github page][eldar]. Thanks!
